--- a/exp_specs/ebil/ebil_deen_hopper_4.yaml
+++ b/exp_specs/ebil/ebil_deen_hopper_4.yaml
@@ -10,12 +10,12 @@ meta_data:
   node_exclusions: gpu048,gpu024,gpu025,gpu012,gpu027
 # -----------------------------------------------------------------------------
 variables:
-  ebm_epoch: [50000, 100000] # [500, 1000, 1500, 2000, 2500, 3000,'best']
-  ebm_sigma:  [0.05, 0.1]
+  ebm_epoch: [25000, 50000, 75000, 100000, 'best']
+  ebm_sigma:  [0.01, 0.05, 0.1, 0.2, 0.3]
   sac_params:
-    reward_scale: [16]
+    reward_scale: [1.0, 2.0, 4.0, 8.0, 16.0]
   # seed: [723894, 23789]
-  seed: [723894]
+  seed: [0, 1, 2]
 
 # -----------------------------------------------------------------------------
 constants:
@@ -24,7 +24,7 @@ constants:
   expert_traj_num: 4
   expert_idx: 0
   scale_env_with_demo_stats: false
-  minmax_env_with_demo_stats: true
+  minmax_env_with_demo_stats: false
 
   ebm_num_blocks: 5
   ebm_hid_dim: 512
@@ -44,7 +44,7 @@ constants:
     state_only: false
     clamp_magnitude: -1
 
-    num_epochs: 302
+    num_epochs: 162
     num_steps_per_epoch: 100000
     num_steps_between_train_calls: 1000
     max_path_length: 1000
