--- a/exp_specs/deen/deen_hopper_4.yaml
+++ b/exp_specs/deen/deen_hopper_4.yaml
@@ -12,13 +12,13 @@ meta_data:
 variables:
   # seed: [723894, 23789]
   seed: [723894]
-  sigma: [0.01, 0.05, 0.1, 0.2, 0.3]
+  sigma: [0.01, 0.05, 0.1]
 
 # -----------------------------------------------------------------------------
 constants:
-  expert_name: 'norm_hopper_4_demos_sub_20'
+  expert_name: 'norm01_hopper_4_demos_sub_20'
   expert_idx: 0
-  scale_env_with_demo_stats: false
+  scale_env_with_demo_stats: true
   minmax_env_with_demo_stats: false
 
   policy_net_size: 256
