--- a/expert_demos_listing.yaml
+++ b/expert_demos_listing.yaml
@@ -70,18 +70,12 @@ norm_hopper_4_demos_sub_20:
     ./demos/norm_hopper_4_demos_20_subsampling.pkl
   ]
 
+norm01_hopper_4_demos_sub_20:
+  description: "normalized, Hopper, 4 demo trajectories, subsampling factor 20"
+  file_paths: [
+    ./demos/norm01_norm_hopper_4_demos_sub_20.pkl
+  ]
 
-# halfcheetah_16_demos_sub_20:
-#   description: "HalfCheetah, 16 demo trajectories, subsampling factor 20"
-#   file_paths: [
-#     /scratch/hdd001/home/kamyar/output/gen-halfcheetah-demos/gen_halfcheetah_demos_2019_08_07_15_48_30_0000--s-0/expert_demos.pkl
-#   ]
-
-# norm_halfcheetah_16_demos_sub_20:
-#   description: "norm, HalfCheetah, 16 demo trajectories, subsampling factor 20"
-#   file_paths: [
-#     /scratch/hdd001/home/kamyar/output/norm_halfcheetah_16_demos_sub_20/expert_demos.pkl
-#   ]
 
 
 # STATE MARGINAL MATCHING
