--- a/expert_demos_listing.yaml
+++ b/expert_demos_listing.yaml
@@ -1,95 +1,167 @@
 norm_halfcheetah_32_demos_sub_20:
   description: "normalized, HalfCheetah, 32 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_halfcheetah_32_demos_20_subsampling.pkl
+    ./demos/norm01_norm_halfcheetah_32_demos_sub_20.pkl
   ]
 
 norm_halfcheetah_16_demos_sub_20:
   description: "normalized, HalfCheetah, 16 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_halfcheetah_16_demos_20_subsampling.pkl
+    ./demos/norm01_norm_halfcheetah_16_demos_sub_20.pkl
   ]
 
 norm_halfcheetah_4_demos_sub_20:
   description: "normalized, HalfCheetah, 4 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_halfcheetah_4_demos_20_subsampling.pkl
+    ./demos/norm01_norm_halfcheetah_4_demos_sub_20.pkl
   ]
 
 norm_ant_32_demos_sub_20:
   description: "normalized, Ant, 32 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_ant_32_demos_20_subsampling.pkl
+    ./demos/norm01_norm_ant_32_demos_sub_20.pkl
   ]
 
 norm_ant_16_demos_sub_20:
   description: "normalized, Ant, 16 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_ant_16_demos_20_subsampling.pkl
+    ./demos/norm01_norm_ant_16_demos_sub_20.pkl
   ]
 
 norm_ant_4_demos_sub_20:
   description: "normalized, Ant, 4 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_ant_4_demos_20_subsampling.pkl
+    ./demos/norm01_norm_ant_4_demos_sub_20.pkl
   ]
 
 norm_walker_32_demos_sub_20:
   description: "normalized, Walker, 32 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_walker_32_demos_20_subsampling.pkl
+    ./demos/norm01_norm_walker_32_demos_sub_20.pkl
   ]
 
 norm_walker_16_demos_sub_20:
   description: "normalized, Walker, 16 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_walker_16_demos_20_subsampling.pkl
+    ./demos/norm01_norm_walker_16_demos_sub_20.pkl
   ]
 
 norm_walker_4_demos_sub_20:
   description: "normalized, Walker, 4 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_walker_4_demos_20_subsampling.pkl
+    ./demos/norm01_norm_walker_4_demos_sub_20.pkl
+    # ./demos/norm_walker_4_demos_20_subsampling.pkl
   ]
 
 norm_hopper_32_demos_sub_20:
   description: "normalized, Hopper, 32 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_hopper_32_demos_20_subsampling.pkl
+    ./demos/norm01_norm_hopper_32_demos_sub_20.pkl
   ]
 
 norm_hopper_16_demos_sub_20:
   description: "normalized, Hopper, 16 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_hopper_16_demos_20_subsampling.pkl
+    ./demos/norm01_norm_hopper_16_demos_sub_20.pkl
   ]
 
 norm_hopper_4_demos_sub_20:
   description: "normalized, Hopper, 4 demo trajectories, subsampling factor 20"
   file_paths: [
-    ./demos/norm_hopper_4_demos_20_subsampling.pkl
-  ]
-
-norm01_hopper_4_demos_sub_20:
-  description: "normalized, Hopper, 4 demo trajectories, subsampling factor 20"
-  file_paths: [
     ./demos/norm01_norm_hopper_4_demos_sub_20.pkl
   ]
+
+hopper_4_demos:
+  description: "Hopper, 4 demo trajectories,"
+  file_paths: [
+    ./demos/hopper_4_demos.pkl
+  ]
+
+norm_hopper_4_demos:
+  description: "Hopper, 4 demo trajectories,"
+  file_paths: [
+    ./demos/norm01_norm_hopper_4_demos.pkl
+  ]
+
+hopper_mul_4_demos_sub_20:
+  description: "Hopper, multi-step, 4 demo trajectories, subsampling factor 20"
+  file_paths: [
+    ./demos/hopper_mul_4_demos_20_subsampling.pkl
+  ]
+
+norm_hopper_mul_4_demos_sub_20:
+  description: "normalized, Hopper, multi-step, 4 demo trajectories, subsampling factor 20"
+  file_paths: [
+    ./demos/norm_hopper_mul_4_demos_20_subsampling.pkl
+  ]
+
+
+
+# halfcheetah_16_demos_sub_20:
+#   description: "HalfCheetah, 16 demo trajectories, subsampling factor 20"
+#   file_paths: [
+#     /scratch/hdd001/home/kamyar/output/gen-halfcheetah-demos/gen_halfcheetah_demos_2019_08_07_15_48_30_0000--s-0/expert_demos.pkl
+#   ]
+
+# norm_halfcheetah_16_demos_sub_20:
+#   description: "norm, HalfCheetah, 16 demo trajectories, subsampling factor 20"
+#   file_paths: [
+#     /scratch/hdd001/home/kamyar/output/norm_halfcheetah_16_demos_sub_20/expert_demos.pkl
+#   ]
+
+lunar_4_demos:
+  description: "Lunar, 4 demo trajectories,"
+  file_paths: [
+    ./demos/lunar_4_demos.pkl
+  ]
+
+lunar_4_demos_sub_20:
+  description: "Lunar, 4 demo trajectories, subsampling factor 20"
+  file_paths: [
+    ./demos/lunar_4_demos_20_subsampling.pkl
+  ]
+
+pendulum_4_demos_sub_20:
+  description: "pendulum, 4 demo trajectories, subsampling factor 20"
+  file_paths: [
+    ./demos/pendulum_4_demos_sub_20.pkl
+  ]
+
 
 
 
 # STATE MARGINAL MATCHING
 
+pm_x:
+  description: "x, noise scale 0.2, 16K points"
+  file_paths: [
+    ./demos/pm_x.pkl
+  ]
+
+pm_triangle:
+  description: "triangle, noise scale 0.2, 4K points"
+  file_paths: [
+    ./demos/pm_triangle.pkl
+  ]
+
+pm_square:
+  description: "square, noise scale 0.2, 4K points"
+  file_paths: [
+    ./demos/pm_square.pkl
+  ]
+
+
+
 corl_pm_spiral:
   description: "spiral, radius 16, 2 rotations, noise scale 0.3, 16K points"
   file_paths: [
-    /scratch/hdd001/home/kamyar/expert_demos/data_gen/corl_pm_spiral_16.pkl
+    ./demos/corl_pm_spiral_16.pkl
   ]
 
 corl_pm_infinity:
   description: "infinity, radius 12, noise scale 0.3, 4K points"
   file_paths: [
-    /scratch/hdd001/home/kamyar/expert_demos/data_gen/corl_pm_infinity.pkl
+    ./demos/corl_pm_infinity.pkl
   ]
 
 corl_pusher_sin_trace:
